2011-01-11  Dominique Dumont  <domi.dumont@free.fr> 1.320

        * LeafViewer: removed 'apply fix' button. This one is reserved for 
        LeafEditor
        
2011-01-09  Dominique Dumont  <domi.dumont@free.fr> 1.319

        * LeafEditor: added fix button to fix warnings (if model provides a fix)
        * Wizard: clicking on next or previous does save value from wizard. 'stop' button
          will use new bail_out method from WizardHelper.

2010-12-21  Dominique Dumont  <domi.dumont@free.fr> 1.318

	* ListEditor: changed label of push button (minor)
	* Run-time depends on File::Slurp
	* LeafEditor: added external editor button

2010-11-05  Dominique Dumont  <domi.dumont@free.fr> 1.317

        * TkUi.pm: in Tk::Error call Show on Dialog to avoid masking errors

2010-10-19  Dominique Dumont  <domi.dumont@free.fr> 1.316

	* dist.ini/Buil.PL: added missing test dependency
	* LeadEditor: fix check call

2010-10-19  Dominique Dumont  <domi.dumont@free.fr> 1.315

	* Do no check value when creating widgets. Values will be checked
	  when saving file
	* ListEditor: update 'set selected' entry when a list item is selected"

2010-10-15  Dominique Dumont  <domi.dumont@free.fr> 1.314

	* removed stuff obsoleted by Config::Model 1.212
	* Depends on Config::Model 1.212
	* added utf8 characters in tests

2010-10-08  Dominique Dumont  <domi.dumont@free.fr> 1.313

	* Added display of configuration warnings provided by
	Config::Model 1.211 
	* Depends on Config::Model >= 1.211

2010-10-04  Dominique Dumont  <domi.dumont@free.fr> 1.312

	* lib/Config/Model/TkUI.pm (disp_hash): Fixed the synchronize ordered 
	hash display. It used to close displayed hash elements when modifying a value
	well below the hash :-( .

2010-09-10  Dominique Dumont  <domi.dumont@free.fr> 1.311

	* lib/Config/Model/Tk/HashEditor.pm (Populate): usability improvement:
	  copy selected entry text into item when keep is set
	* lib/Config/Model/TkUI.pm (disp_hash): Synchronize ordered hash display in