@@ -18,7 +18,7 @@ Construct Tk::Widget 'ConfigModelHashEditor';
 my @fbe1 = qw/-fill both -expand 1/ ;
 my @fxe1 = qw/-fill x    -expand 1/ ;
 my @fx   = qw/-fill x    / ;
-my $logger = Log::Log4perl::get_logger(__PACKAGE__);
+my $logger = Log::Log4perl::get_logger(")Tk::HashEditor");
 
 my $entry_width = 15 ;
 
