@@ -17,7 +17,7 @@ Construct Tk::Widget 'ConfigModelListEditor';
 my @fbe1 = qw/-fill both -expand 1/ ;
 my @fxe1 = qw/-fill x    -expand 1/ ;
 my @fx   = qw/-fill    x / ;
-my $logger = Log::Log4perl::get_logger(__PACKAGE__);
+my $logger = Log::Log4perl::get_logger("Tk::ListEditor");
 
 my $up_img;
 my $down_img;
